--- a/src/sass/viewloadout.scss
+++ b/src/sass/viewloadout.scss
@@ -67,15 +67,14 @@ div#vcomments {
 		padding: 0.5em 0;
 
 		&> header {
-			position: relative;
-			height: 3.5em;
+			min-height: 3.5em;
 			margin-top: 0.5em;
 
 			&> div.author {
-				position: absolute;
-				right: 0.5em;
+				float: right;
+				margin: 0 0.5em;
 				background-color: #F4F4F8;
-				height: 100%;
+				height: 3.5em;
 				width: 13em;
 
 				@include ellipsis;
@@ -99,18 +98,20 @@ div#vcomments {
 
 			&> div.author.edit {
 				width: 10em;
-				right: 14em;
+				margin-right: 0;
 				background-color: transparent;
 				opacity: 0.5;
 			}
 
 			&> div.meta {
-				position: absolute;
-				left: 0.25em;
-				right: 27em;
-				height: 100%;
+				margin-left: 0.25em;
 				color: #CCC;
 				font-size: 0.9em;
+
+				@include layout-type(smallandextrasmall) {
+					padding-top: 0.25em;
+					clear: both;
+				}
 
 				&> span.outdated, &> span.outdated > a {
 					color: #888;
